Optimized the diagram once again, less code.